# dls-pmac-lib

./: .copier-answers.yml  .coveragerc  .gitignore  .gitremotes  CONTRIBUTING.rst  Dockerfile  Makefile  Pipfile  README.md  README.rst  catalog-info.yaml  pyproject.toml  setup.cfg  setup.py  switcher.json
.github/: CONTRIBUTING.md
.github/workflows/: code.yml
3.1.0/: .buildinfo  how-to.html  py-modindex.html  search.html  tutorials.html
3.1.0/.doctrees/: _api.doctree  explanations.doctree  genindex.doctree  index.doctree  tutorials.doctree
3.1.0/.doctrees/explanations/decisions/: 0002-switched-to-python-copier-template.doctree
3.1.0/.doctrees/tutorials/: installation.doctree
3.1.0/_sources/tutorials/: installation.md.txt
3.1.0/explanations/: decisions.html
3.1.0/explanations/decisions/: 0001-record-architecture-decisions.html
3.1.0/how-to/: contribute.html  run-container.html
3.1.1/: _api.html  explanations.html  genindex.html  index.html  objects.inv  reference.html  searchindex.js
3.1.1/.doctrees/how-to/: run-container.doctree
3.1.1/_api/: dls_pmaclib.html
3.1.1/explanations/decisions/: 0002-switched-to-python-copier-template.html
3.1.1/tutorials/: installation.html
3.1.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.1.2/.doctrees/: how-to.doctree  reference.doctree
3.1.2/.doctrees/_api/: dls_pmaclib.doctree
3.1.2/.doctrees/explanations/: decisions.doctree
3.1.2/.doctrees/how-to/: contribute.doctree
3.1.2/_api/: dls_pmaclib.html
3.1.2/_sources/: reference.md.txt
3.1.2/_sources/_api/: dls_pmaclib.rst.txt
3.1.2/_sources/how-to/: run-container.md.txt
3.1.2/explanations/: decisions.html
3.1.2/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html
3.1.2/how-to/: contribute.html  run-container.html
3.1.2/tutorials/: installation.html
dls_pmaclib/: __init__.py  __main__.py  cli.py  dls_pmaclib.py  dls_pmacremote.py  dls_pmcpreprocessor.py  gatherchannel.py  pmacgather.py
docs/: _api.rst  conf.py  index.rst  reference.md
docs/reference/: api.rst
documentation/: config.cfg  manual.src
src/dls_pmac_lib/: __main__.py
src/dls_pmaclib/: __init__.py  __main__.py  dls_pmacremote.py  dls_pmcpreprocessor.py
test/: quicktest.py  test_connection.py  test_dls_pmaclib.py  test_dls_pmcpreprocessor.py
tests/: ignore_test_dlspmacremote.py  quicktest.py  test_cli.py  test_connection.py  test_dls_pmaclib.py  test_dlspmaclib.py  test_dlspmcpreprocessor.py  test_ethernet.py  test_remote.py  test_serial.py  test_ssh.py  test_telnet.py
(+1 files in other folders)
