[metadata]
name = dls_pmaclib
version = file: dls_pmaclib/VERSION
description = Delta Tau pmac communication library
author = Jon Thompson
maintainer = Giles Knap
author_email = giles.knap@diamond.ac.uk

[options]
packages = dls_pmaclib
include_package_data = False
install_requires =
    pyserial

[options.package_data]
dls_pmaclib = VERSION
